--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "react-progress-bar",
-  "version": "0.0.1 ",
+  "version": "0.0.1",
   "description": "React Progress Bar",
   "main": "src/index.js",
   "directories": {
     "doc": "docs",
-    "test": "test"
+    "src": "src"
   },
   "dependencies": {
     "classnames": "^2.2.5",
