--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "case-sensitive-paths-webpack-plugin": "1.1.4",
     "chai": "^4.0.2",
     "chalk": "1.1.3",
+    "coveralls": "^2.13.1",
     "css-loader": "0.28.1",
     "dotenv": "4.0.0",
     "enzyme": "^2.8.2",
@@ -68,7 +69,7 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "docs": "esdoc",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom --coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
   "jest": {
     "collectCoverageFrom": [
