--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "docs": "esdoc",
-    "test": "node scripts/test.js --env=jsdom --coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
+    "test": "node scripts/test.js --env=jsdom",
+    "test:coverage": "node scripts/test.js --env=jsdom --coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
   },
   "jest": {
     "collectCoverageFrom": [
